SERVER-71568 Fix race condition related to access to ChangeStreamOptions

(cherry picked from commit 92d8c8e3aaf9b4914db3b9fd4a10ef3bb9595f07)